--- a/test/Mockups/html/juega.html
+++ b/test/Mockups/html/juega.html
@@ -29,7 +29,7 @@
         <div>
           <span>© 2021 Juan Diego Carretero Granado</span>
         </div>
-        <a class="icono_footer" href="https://github.com/JDCG00/Repaso_Servidor_JuanDiego/tree/main/5.Practicar-vocabulario-en-ingl%C3%A9s/">
+        <a class="icono_footer" href="https://github.com/JDCG00/Practicar-vocabulario-en-ingles">
             <img src="../imgs/eng.png">
         </a>
     </footer>
