--- a/html/juega.html
+++ b/html/juega.html
@@ -21,7 +21,16 @@
         </ul>
     </nav>
     <div class="contenedor">
-        
+        <div class="container">
+            Words
+            <p class="draggable" draggable="true">Blue</p>
+            <p class="draggable" draggable="true">Red</p>
+            <p class="draggable" draggable="true">Green</p>
+            <p class="draggable" draggable="true">Yellow</p>
+        </div>
+        <div class="container">
+            Colors
+        </div>
     </div>
     <footer>
         <div>
@@ -30,6 +39,7 @@
         <a class="icono_footer" href="https://github.com/JDCG00/Practicar-vocabulario-en-ingles">
             <img src="../imgs/eng.png">
         </a>
+        <script src="../js/drag-and-drop.js"></script>
     </footer>
 </body>
 </html>
