--- a/test/drag-and-drop-v3/index.html
+++ b/test/drag-and-drop-v3/index.html
@@ -9,12 +9,13 @@
     </head>
     <body>
         <div class="container">
-            <p class="draggable" draggable="true">1</p>
-            <p class="draggable" draggable="true">2</p>
+            <p class="draggable" draggable="true">Blue</p>
+            <p class="draggable" draggable="true">Red</p>
+            <p class="draggable" draggable="true">Green</p>
+            <p class="draggable" draggable="true">Yellow</p>
           </div>
           <div class="container">
-            <p class="draggable" draggable="true">3</p>
-            <p class="draggable" draggable="true">4</p>
+            Colors
           </div>
         <script src="script.js"></script>
     </body>
