--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
             <li class="icono"><a href="html/login.html" class="nav-link"><img src="imgs/user.png">Login</a></li>
         </ul>
     </nav>
-    <div class="contenedor"></div>
+    <div class="contenedor">
+        <div class="texto_ejemplo">
+            <h1>Página de Inicio</h1>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis accusantium quidem eum error doloremque, molestiae est minima voluptatem repellat inventore officia, esse quos accusamus veritatis repellendus nam aliquid ea? Maiores eum ducimus ad, necessitatibus corporis consequatur aperiam eveniet omnis voluptatibus, eligendi iste in illo! Modi cumque adipisci libero, tenetur earum quis quisquam incidunt dicta, culpa, nesciunt ut ad atque sed? Aperiam atque officia minima dolor ducimus corrupti maiores consequuntur, voluptatum repellat laboriosam cumque quisquam nisi labore modi aspernatur error sed fugiat nulla neque iure tempore expedita? Accusantium ducimus earum at nostrum omnis, nisi quos delectus dignissimos odit illo inventore sed quis quidem consequuntur modi? Doloremque, velit, suscipit accusantium repellendus ullam error, sit ab quia nisi architecto quae deserunt. Minus quisquam iste cumque cum nostrum, ratione magni ullam minima nemo eveniet dolor deleniti ipsam magnam rem, error provident ut accusantium facilis molestiae deserunt labore sunt nisi? Alias distinctio esse quam doloremque?
+        </div>
+    </div>
     <footer>
         <div>
           <span>© 2021 Juan Diego Carretero Granado</span>
