--- a/html/informacion.html
+++ b/html/informacion.html
@@ -12,8 +12,8 @@
     <nav>
         <ul id="panel-navegacion" class="nav nav-boton">
             <li class="icono"><a href="../index.html" class="nav-link"><img src="../imgs/english.png"></a></li>
-            <li><a href="#" class="nav-link activado">Juega</a></li>
-            <li><a href="informacion.html" class="nav-link">Información</a></li>
+            <li><a href="juega.html" class="nav-link">Juega</a></li>
+            <li><a href="#" class="nav-link activado">Información</a></li>
             <li><a href="contacto.html" class="nav-link">Contacta</a></li>
         </ul>
         <ul class="nav nav-boton" id="login">
@@ -21,9 +21,10 @@
         </ul>
     </nav>
     <div class="contenedor">
-        <form action="#" method="post">
-            <input type="text">
-        </form>
+        <div class="texto_ejemplo">
+            <h1>Texto de ejemplo</h1>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem quis in necessitatibus ea amet iste repudiandae sequi, suscipit inventore officia aperiam praesentium asperiores, quaerat totam. Odio saepe sapiente obcaecati vero, deserunt modi ducimus perspiciatis minus excepturi sed. Facilis autem nam est delectus debitis porro, molestias iure totam, similique optio consequuntur id sunt doloribus explicabo. Nesciunt, nihil! Amet perspiciatis ab est eum perferendis beatae itaque. Ducimus perspiciatis quia nostrum sunt vitae magnam quam quas dolor, nesciunt fugiat cum rerum incidunt soluta vero debitis in, a mollitia rem repellat fugit. Numquam officiis nesciunt alias repellat iusto magni, assumenda similique aliquid doloremque a.
+        </div>
     </div>
     <footer>
         <div>
