--- a/html/juega.html
+++ b/html/juega.html
@@ -12,15 +12,26 @@
     <nav>
         <ul id="panel-navegacion" class="nav nav-boton">
             <li class="icono"><a href="../index.html" class="nav-link"><img src="../imgs/english.png"></a></li>
-            <li><a href="juega.html" class="nav-link">Juega</a></li>
-            <li><a href="#" class="nav-link activado">Información</a></li>
+            <li><a href="#" class="nav-link activado">Juega</a></li>
+            <li><a href="informacion.html" class="nav-link">Información</a></li>
             <li><a href="contacto.html" class="nav-link">Contacta</a></li>
         </ul>
         <ul class="nav nav-boton" id="login">
             <li class="icono"><a href="login.html" class="nav-link"><img src="../imgs/user.png">Login</a></li>
         </ul>
     </nav>
-    <div class="contenedor"></div>
+    <div class="contenedor">
+        <div class="container">
+            Words
+            <p class="draggable" draggable="true">Blue</p>
+            <p class="draggable" draggable="true">Red</p>
+            <p class="draggable" draggable="true">Green</p>
+            <p class="draggable" draggable="true">Yellow</p>
+        </div>
+        <div class="container">
+            Colors
+        </div>
+    </div>
     <footer>
         <div>
           <span>© 2021 Juan Diego Carretero Granado</span>
@@ -28,6 +39,7 @@
         <a class="icono_footer" href="https://github.com/JDCG00/Practicar-vocabulario-en-ingles">
             <img src="../imgs/eng.png">
         </a>
+        <script src="../js/drag-and-drop.js"></script>
     </footer>
 </body>
 </html>
