Crear Ejercicio hecho

--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,8 @@
             <li><a href="contacto.html" class="nav-link">Contacta</a></li>
         </ul>
         <ul class="nav nav-boton" id="login">
-            <li class="icono"><a href="#" class="nav-link activado"><img src="../imgs/user.png">Login</a></li>
+            <li id="inicio_sesion" class="icono"><a href="#" class="nav-link activado"><img src="../imgs/user.png">Login</a></li>
+            <li><a href="crearEjercicio.html" class="nav-link">Crear Ejercicio</a></li>
         </ul>
     </nav>
     <div class="contenedor">
