--- a/html/informacion.html
+++ b/html/informacion.html
@@ -17,7 +17,7 @@
             <li><a href="contacto.html" class="nav-link">Contacta</a></li>
         </ul>
         <ul class="nav nav-boton" id="login">
-            <li class="icono"><a href="login.html" class="nav-link"><img src="../imgs/user.png">Login</a></li>
+            <li id="inicio_sesion" class="icono"><a href="login.html" class="nav-link"><img src="../imgs/user.png">Login</a></li>
         </ul>
     </nav>
     <div class="contenedor">
