--- a/html/crearEjercicio.html
+++ b/html/crearEjercicio.html
@@ -22,7 +22,7 @@
         </ul>
     </nav>
     <div class="contenedor">
-        <form action="#" method="post" enctype="multipart/form-data">
+        <form class="form" action="#" method="post" enctype="multipart/form-data">
             <div class="title">Crear ejercicios</div>
             <div class="subtitle">Introduzca datos</div>
             <div class="input-container ic1">
