--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="php/view/contacto.php" class="nav-link">Contacta</a></li>
         </ul>
         <ul class="nav nav-boton" id="login">
-            <li class="icono"><a href="php/view/login.php" class="nav-link"><img src="imgs/user.png">Login</a></li>
+            <li id="inicio_sesion" class="icono"><a href="php/view/login.php" class="nav-link"><img src="imgs/user.png">Login</a></li>
         </ul>
     </nav>
     <div class="contenedor">
