--- a/html/crearEjercicio.html
+++ b/html/crearEjercicio.html
@@ -54,7 +54,37 @@
                 <div class="cut"></div>
                 <label for="clase" class="placeholder">Clase</label>
             </div>
-            <input class="submit" type="submit" name="enviar" value="Crear Ejercicio">
+            <div class="input-container ic2">
+                <input class="input" type="text" placeholder=" " name="palabras" />
+                <div class="cut"></div>
+                <label for="palabras" class="placeholder">Nº de palabras a añadir</label>
+            </div>
+            <div class="palabras">
+                <div class="title">Palabras a añadir</div>
+                <select name="palabra1">
+                    <option value="mouse">Mouse</option>
+                    <option value="yellow">Yellow</option>
+                    <option value="red">Red</option>
+                    <option value="pencil">Pencil</option>
+                    <option value="snowy">Snowy</option>
+                </select>
+                <select name="palabra2">
+                    <option value="black">Black</option>
+                    <option value="eraser">Eraser</option>
+                    <option value="cloudy">Cloudy</option>
+                    <option value="ant">Ant</option>
+                    <option value="fox">Fox</option>
+                </select>
+                <select name="palabra3">
+                    <option value="frog">Frog</option>
+                    <option value="blue">Blue</option>
+                    <option value="green">Green</option>
+                    <option value="keyboard">Keyboard</option>
+                    <option value="teacher">Teacher</option>
+                </select>
+            </div>
+            <input class="submit" type="submit" name="añadir" value="Añadir Palabras">
+            <input class="submit" type="submit" name="crear" value="Crear Ejercicio">
         </form>
     </div>
     <footer>
