--- a/html/juega.html
+++ b/html/juega.html
@@ -27,9 +27,19 @@
             <p class="draggable" draggable="true">Red</p>
             <p class="draggable" draggable="true">Green</p>
             <p class="draggable" draggable="true">Yellow</p>
+            <p class="draggable" draggable="true">Teacher</p>
+            <p class="draggable" draggable="true">Pencil</p>
+            <p class="draggable" draggable="true">Snowy</p>
+            <p class="draggable" draggable="true">Eraser</p>
         </div>
         <div class="container">
             Colors
+        </div>
+        <div class="container">
+            School
+        </div>
+        <div id="corregir" class="nav nav-boton">
+            <div><a href="" class="nav-link activado">Corregir</a></div>
         </div>
     </div>
     <footer>
