--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <nav>
         <ul id="panel-navegacion" class="nav nav-boton">
             <li class="icono"><a href="#" class="nav-link activado"><img src="imgs/english.png"></a></li>
-            <li><a href="php/view/juega.php" class="nav-link">Juega</a></li>
-            <li><a href="php/view/informacion.php" class="nav-link">Información</a></li>
-            <li><a href="php/view/contacto.php" class="nav-link">Contacta</a></li>
+            <li><a href="php/controller/controlador.php?accion=jugar" class="nav-link">Juega</a></li>
+            <li><a href="php/controller/controlador.php?accion=informacion" class="nav-link">Información</a></li>
+            <li><a href="php/controller/controlador.php?accion=contacto" class="nav-link">Contacta</a></li>
         </ul>
         <ul class="nav nav-boton" id="login">
-            <li id="inicio_sesion" class="icono"><a href="php/view/login.php" class="nav-link"><img src="imgs/user.png">Login</a></li>
+            <li id="inicio_sesion" class="icono"><a href="php/controller/controlador.php?accion=login" class="nav-link"><img src="imgs/user.png">Login</a></li>
         </ul>
     </nav>
     <div class="contenedor">
