jugar casi terminado

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <ul id="panel-navegacion" class="nav nav-boton">
             <li class="icono"><a href="#" class="nav-link activado"><img src="imgs/english.png"></a></li>
-            <li><a href="php/controller/controlador.php?accion=jugar" class="nav-link">Juega</a></li>
+            <li><a href="php/controller/controlador.php?accion=codigo" class="nav-link">Juega</a></li>
             <li><a href="php/controller/controlador.php?accion=informacion" class="nav-link">Información</a></li>
             <li><a href="php/controller/controlador.php?accion=contacto" class="nav-link">Contacta</a></li>
         </ul>
